fix horizontal spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ form {
     opacity: 0.6;
     flex-shrink: 0;
     position: relative;
-    top: 10px;
+    top: 20px;
 }
 
 .form-actions {
